apps/servarr/lidarr/overlays/nishir-tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: lidarr
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: lidarr
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: shikanime
