apps/servarr/lidarr/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr-redirect
spec:
  hostnames:
      - lidarr.i.shikanime.studio
  parentRefs:
    - name: lidarr
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
