apps/servarr/lidarr/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
spec:
  hostnames:
    - lidarr.i.shikanime.studio
  parentRefs:
    - name: lidarr
      sectionName: https
